add css for the navigation

--- a/src/components/MainMenu/MainMenu.scss
+++ b/src/components/MainMenu/MainMenu.scss
@@ -1,18 +1,29 @@
-a {
-  &:link, &:visited {
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    color:black;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+
+  li {
+    float: left;
+
+    a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 16px;
+      text-decoration: none;
+
+      &:hover {
+        background-color: #111111;
+      }
+
+      &.active {
+        background-color: #111111;
+      }
+    }
   }
 
-  &.active {
-    color: red;
-  }
-
-  &:hover, &:active {
-    color:purple;
-    text-decoration: underline;
-  }
 }
+
